# ProjetoEngenharia-SoftwareAnaliseEncrustacaoAmostrasSalmouras

./: .gitignore  1-PreProjeto-0-Capa.lyx  1-PreProjeto-1-Introducao-IdentificacaoDaProposta-Resumo-Escopo-Objetivos.lyx  1-PreProjeto-2-Etapas-Atividades-Cronograma-Orcamento.lyx  1-PreProjeto-Master.lyx  CMakeLists.txt  CreateIons.h  PrecipitationCalculator.h  README.html  README.md  README.org  Sandbox.cpp  Tarefas.org  ThermodynamicConditions.cpp  ThermodynamicConditions.h
1-PreProjeto-IdentificacaoDaProposta/lyx/: #1-PreProjeto-1-Introducao-Escopo-Objetivos.lyx#  1-PreProjeto-0-Capa.lyx  1-PreProjeto-0-Capa.lyx.emergency  1-PreProjeto-1-Introducao-Escopo-Objetivos.lyx  1-PreProjeto-1-Introducao-Escopo-Objetivos.lyx.emergency  1-PreProjeto-2-Etapas-Cronograma.lyx  1-PreProjeto-2-Etapas-Cronograma.lyx.emergency  1-PreProjeto-Master.lyx
3-Execucao-ModelosDeEngenharia/lyx/: #3-Projeto-ModelosDeEngenharia-3-AnaliseOrientadaAObjeto.lyx#  #3-Projeto-ModelosDeEngenharia-4-ProjetoSistema-ProjetoOrientadoObjeto.lyx#  3-Projeto-ModelosDeEngenharia-0-Capa.lyx  3-Projeto-ModelosDeEngenharia-1-Concepcao-Requisitos.lyx  3-Projeto-ModelosDeEngenharia-2-Elaboracao.lyx  3-Projeto-ModelosDeEngenharia-3-AnaliseOrientadaAObjeto.lyx  3-Projeto-ModelosDeEngenharia-4-ProjetoSistema-ProjetoOrientadoObjeto.lyx  3-Projeto-ModelosDeEngenharia-5-ListaCaracteristicas-FeaturesASeremImplementadas.lyx  3-Projeto-ModelosDeEngenharia-Master.lyx
3-Execucao-ModelosDeEngenharia/uml/: ProjetoEngenahria_SoftwareAnaliseIncrustacao.xmi
4-Execucao-Detalhamento-Construcao-Versao-1/: tarefas.org
4-Execucao-Detalhamento-Construcao-Versao-1/doc/ManualDoDesenvolvedor/: #ProjetoEngenharia-ManualDoDesenvolvedor.lyx#  Cap0-Capa.lyx  Cap0-Introducao-Escopo-Objetivos-Metodologia.lyx  Cap0b-ResumoAbstract.lyx  Cap1-Concepcao.lyx  Cap2-Elaboracao.lyx  Cap3-AnaliseOrientadaAObjeto.lyx  Cap4-Projeto.lyx  Cap5-Ciclos-Planejamento-Detalhamento.lyx  Cap6-Ciclos-Construcao-Implementacao.lyx  Cap7-Teste.lyx  ProjetoEngenharia-ManualDoDesenvolvedor.lyx
4-Execucao-Detalhamento-Construcao-Versao-1/doc/ManualDoUsuario/: Cap1-Instalacao-Dependencias.lyx  Cap2-Interface-ComoUsar.lyx  Cap3-ExemplosDeUso.lyx  Cap4-Contatos.lyx  ProjetoEngenharia-ManualDoUsuario.lyx
4-Execucao-Detalhamento-Construcao-Versao-1/src/: CIons.cpp  CIons.h  CMakeLists.txt  CMisturaSalmouras.cpp  CMisturaSalmouras.h  CPlotConfig.h  CPlotPrecipitacao.cpp  CPlotPrecipitacao.h  CSalmoura.cpp  CSalmoura.h  CSalt.cpp  CSalt.h  CSimuladorPrecipitacao.cpp  CSimuladorPrecipitacao.h  CTabelaPropriedadesIons.cpp  CTabelaPropriedadesIons.h  CThermodynamicConditions.cpp  CThermodynamicConditions.h  CreateIons.cpp  CreateIons.h  PrecipitationCalculator.cpp  PrecipitationCalculator.h  ProjetoEngenahria_SoftwareAnaliseIncrustacao.xmi  Salt.cpp  Salt.h  dados_ions.txt  main.cpp  multiplot_barras.gp  plot_ksp_vs_temp.gp  plot_q_vs_ksp.gp
4-Execucao-Detalhamento-Construcao-Versao-1/src/dados/: salmoura_Petrobras.txt  salmoura_calcita.txt  salmoura_exemplo.txt  tabela_ions.txt  tabela_sais_tabs.txt
imagens/: ProjetoEngenahria_SoftwareAnaliseIncrustacao (2).xmi
